# spindrift

./: .gitignore  README.md  README.mock_server.md  pyproject.toml  pytest.ini  test_mock_server.py  test_timeout.py
.augment/env/: setup.sh
.augment/rules/: spindrift.md
artifacts/: commands.json  progress.md  tasks.md  virtual_files.json
artifacts/mockdata/: cat  diagnose  get_pos  get_state  get_status  get_wcs  ls  ls_dir  mem  pwd  reset  version
spindrift/: __init__.py  cnc.py  logging_config.py  mock_server.py  xmodem.py
tests/: __init__.py  conftest.py  test_xmodem.py  test_xmodem_integration.py  test_xmodem_simple.py
