[tool.poetry]
name = "spindrift"
version = "0.1.0"
description = "CNC Protocol Implementation Library"
authors = ["Matt Cowger <matt.cowger@sigmacomputing.com>"]
readme = "README.md"
packages = [{include = "spindrift"}]

[tool.poetry.scripts]
spindrift = "spindrift.mock_server:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
uv = "^0.7.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
